k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: antifraud-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: antifraud
  template:
    metadata:
      labels:
        app: antifraud
    spec:
      containers:
      - name: antifraud-api
        image: artemzvagin/antifraud:latest
        ports:
        - containerPort: 8080
