k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: antifraud-service
spec:
  type: ClusterIP
  selector:
    app: antifraud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
